Fixed: spacing after note field on debit table

--- a/sites/all/themes/dynamo/style/developer.css
+++ b/sites/all/themes/dynamo/style/developer.css
@@ -162,6 +162,10 @@ iframe.pc-booking { width: 100%; height: 100%; min-height: 600px;}
   padding-right: 4px;
 }
 
+.pane-alma_user_debts_details td.note {
+  padding-right: 4px;
+}
+
 #alma-user-forms-debts-details td .form-item {
   margin:0;
   padding:0;
